--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </div>
 
 <div class="Terma">
-	<p id="TextGeneral">ＴＥＲＭＡ（ｎｕｌｌ）－<span class="Corrupted"></span></p></span>
+	<p id="TextGeneral">ＴＥＲＭＡ（ｎｕｌｌ）－<a href="LEAVE.html"><span class="Corrupted"></span></a></p></span>
 </div>
 
 </div>
